--- a/src/Osu.Music/Views/MainWindow.xaml
+++ b/src/Osu.Music/Views/MainWindow.xaml
@@ -3,6 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         xmlns:prism="http://prismlibrary.com/"
+        xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
         prism:ViewModelLocator.AutoWireViewModel="True"
         WindowStyle="None"
         Title="{Binding Title}" Height="550" Width="900" MinHeight="550" MinWidth="900" Loaded="Window_Loaded">
@@ -10,6 +11,8 @@
         <WindowChrome CaptionHeight="30" ResizeBorderThickness="{x:Static SystemParameters.WindowResizeBorderThickness}" />
     </WindowChrome.WindowChrome>
     <Grid>
-        <ContentControl prism:RegionManager.RegionName="ContentRegion" />
+        <md:DialogHost CloseOnClickAway="True">
+            <ContentControl prism:RegionManager.RegionName="ContentRegion"/>
+        </md:DialogHost>
     </Grid>
 </Window>
