--- a/src/Osu.Music.UI/Resources/Dictionaries/DataTemplates.xaml
+++ b/src/Osu.Music.UI/Resources/Dictionaries/DataTemplates.xaml
@@ -11,4 +11,7 @@
     <DataTemplate DataType="{x:Type vm:SettingsViewModel}">
         <v:SettingsView/>
     </DataTemplate>
+    <DataTemplate DataType="{x:Type vm:PlaylistsViewModel}">
+        <v:PlaylistsView/>
+    </DataTemplate>
 </ResourceDictionary>
