--- a/src/Osu.Music.UI/Resources/Dictionaries/Converters.xaml
+++ b/src/Osu.Music.UI/Resources/Dictionaries/Converters.xaml
@@ -11,4 +11,5 @@
     <convert:SelectedHotkeyToBooleanConverter x:Key="SelectedHotkeyToBooleanConverter"/>
     <convert:KeyCombinationToStringConverter x:Key="KeyCombinationToStringConverter"/>
     <convert:UpdateStateToVisibilityConverter x:Key="UpdateStateToVisibilityConverter"/>
+    <convert:PlaylistCountToStringConverter x:Key="PlaylistCountToStringConverter"/>
 </ResourceDictionary>
