--- a/src/Osu.Music.UI/Resources/Dictionaries/DataTemplates.xaml
+++ b/src/Osu.Music.UI/Resources/Dictionaries/DataTemplates.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:cm="clr-namespace:Osu.Music.Common.Models;assembly=Osu.Music.Common"
                     xmlns:vm="clr-namespace:Osu.Music.UI.ViewModels"
                     xmlns:v="clr-namespace:Osu.Music.UI.Views">
     <DataTemplate DataType="{x:Type vm:AboutViewModel}">
@@ -13,5 +14,25 @@
     </DataTemplate>
     <DataTemplate DataType="{x:Type vm:PlaylistsViewModel}">
         <v:PlaylistsView/>
+    </DataTemplate>
+
+    <DataTemplate x:Key="PlaylistTile" DataType="{x:Type cm:Playlist}">
+        <Border BorderBrush="{DynamicResource SolidColorBrushMainBorder}" BorderThickness="1" CornerRadius="5" Height="210" Width="160" Margin="5">
+            <StackPanel Margin="3">
+                <Rectangle Width="130" Height="122" RadiusX="15" RadiusY="15" Stroke="{DynamicResource SolidColorBrushMain}" Margin="0 15 0 0"/>
+                <TextBlock Text="{Binding Path=Name}" FontFamily="{DynamicResource Roboto}" Foreground="{DynamicResource SolidColorBrushMain}" Background="White" FontSize="14" FontWeight="DemiBold" Margin="11 20 11 0">
+                    <TextBlock.OpacityMask>
+                        <LinearGradientBrush StartPoint="0.0,0.5" EndPoint="1.0,0.5">
+                            <LinearGradientBrush.GradientStops>
+                                <GradientStop Offset="0" Color="Black"/>
+                                <GradientStop Offset="0.8" Color="Black"/>
+                                <GradientStop Offset="1" Color="Transparent"/>
+                            </LinearGradientBrush.GradientStops>
+                        </LinearGradientBrush>
+                    </TextBlock.OpacityMask>
+                </TextBlock>
+                <TextBlock Text="{Binding Path=Beatmaps, Converter={StaticResource PlaylistCountToStringConverter}}" FontFamily="{DynamicResource Roboto}" FontSize="14" FontWeight="Light" Foreground="Gray" Margin="11 5 11 0"/>
+            </StackPanel>
+        </Border>
     </DataTemplate>
 </ResourceDictionary>
