--- a/src/Osu.Music.UI/Views/PlaylistsView.xaml
+++ b/src/Osu.Music.UI/Views/PlaylistsView.xaml
@@ -9,23 +9,31 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Margin="5">
         <Grid.RowDefinitions>
-            <RowDefinition Height="100"/>
+            <RowDefinition Height="auto"/>
             <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
-        <Border BorderBrush="LightGray" BorderThickness="1" CornerRadius="10">
+        <Border BorderBrush="{DynamicResource SolidColorBrushMainBorder}" BorderThickness="1" CornerRadius="10">
             <StackPanel Orientation="Vertical">
                 <DockPanel>
-                    <TextBlock Text="Playlists" FontFamily="{DynamicResource Roboto}" FontSize="16" FontWeight="DemiBold" Margin="10"/>
-                    <Button Style="{DynamicResource PlaylistAction}" Content="&#xe03b;" DockPanel.Dock="Right" HorizontalAlignment="Right" 
+                    <TextBlock Text="Playlists" FontFamily="{DynamicResource Roboto}" Foreground="{DynamicResource SolidColorBrushMain}" FontSize="16" FontWeight="DemiBold" Margin="10"/>
+                    <Button Style="{DynamicResource PlaylistAction}" Foreground="{DynamicResource SolidColorBrushMain}" Content="&#xe03b;" DockPanel.Dock="Right" HorizontalAlignment="Right" 
                             Command="{Binding ShowCreatePlaylistDialogCommand}"/>
                 </DockPanel>
 
-                <ItemsControl ItemsSource="{Binding Playlists}">
-                    <ItemsControl.ItemTemplate>
-                        <DataTemplate DataType="{x:Type m:Playlist}">
-                            <TextBlock Text="{Binding Path=Name}"/>
-                        </DataTemplate>
-                    </ItemsControl.ItemTemplate>
+                <ItemsControl ItemsSource="{Binding Playlists}" ItemTemplate="{DynamicResource PlaylistTile}">
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <VirtualizingStackPanel Orientation="Horizontal"/>
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+                    
+                    <ItemsControl.Template>
+                        <ControlTemplate TargetType="ItemsControl">
+                            <ScrollViewer HorizontalScrollBarVisibility="Auto">
+                                <ItemsPresenter/>
+                            </ScrollViewer>
+                        </ControlTemplate>
+                    </ItemsControl.Template>
                 </ItemsControl>
             </StackPanel>
         </Border>
