Added context menu item that allows to send songs to the playlist

--- a/src/Osu.Music.UI/Resources/Dictionaries/Converters.xaml
+++ b/src/Osu.Music.UI/Resources/Dictionaries/Converters.xaml
@@ -12,4 +12,5 @@
     <convert:KeyCombinationToStringConverter x:Key="KeyCombinationToStringConverter"/>
     <convert:UpdateStateToVisibilityConverter x:Key="UpdateStateToVisibilityConverter"/>
     <convert:PlaylistCountToStringConverter x:Key="PlaylistCountToStringConverter"/>
+    <convert:BeatmapToAvailablePlaylistsConverter x:Key="BeatmapToAvailablePlaylistsConverter"/>
 </ResourceDictionary>
