--- a/src/Osu.Music.UI/Resources/Dictionaries/DataTemplates.xaml
+++ b/src/Osu.Music.UI/Resources/Dictionaries/DataTemplates.xaml
@@ -19,7 +19,16 @@
     <DataTemplate x:Key="PlaylistTile" DataType="{x:Type cm:Playlist}">
         <Border BorderBrush="{DynamicResource SolidColorBrushMainBorder}" BorderThickness="1" CornerRadius="5" Height="210" Width="160" Margin="5">
             <StackPanel Margin="3">
-                <Rectangle Width="130" Height="122" RadiusX="15" RadiusY="15" Stroke="{DynamicResource SolidColorBrushMain}" Margin="0 15 0 0"/>
+                <Grid>
+                    <Grid>
+                        <Rectangle Width="130" Height="122" RadiusX="15" RadiusY="15" Stroke="{DynamicResource SolidColorBrushMain}" Margin="0 15 0 0"/>
+                        <TextBlock FontFamily="{DynamicResource MaterialIcons}" FontSize="100" Text="&#xe03d;" Foreground="{DynamicResource SolidColorBrushMain}" HorizontalAlignment="Center"
+                               VerticalAlignment="Center" Padding="0" Margin="0 10 0 0"/>
+                    </Grid>
+                    <Grid>
+                        <Image Width="130" Height="122"/>
+                    </Grid>
+                </Grid>
                 <TextBlock Text="{Binding Path=Name}" FontFamily="{DynamicResource Roboto}" Foreground="{DynamicResource SolidColorBrushMain}" Background="White" FontSize="14" FontWeight="DemiBold" Margin="11 20 11 0">
                     <TextBlock.OpacityMask>
                         <LinearGradientBrush StartPoint="0.0,0.5" EndPoint="1.0,0.5">
